style/alternatetheme1.css
/* ... */
    @media screen and (max-width: 480px) {
      .tile.tile-4096 .tile-inner {
        font-size: 15px; } }
  .tile.tile-8192 .tile-inner {
    color: #f9f6f2;
    background: #590080;
    box-shadow: 0 0 30px 10px rgba(168, 88, 183, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
    font-size: 35px; }
    @media screen and (max-width: 480px) {
      .tile.tile-8192 .tile-inner {
        font-size: 15px; } }
  .tile.tile-16384 .tile-inner {
    color: #f9f6f2;
    background: #36004d;
    box-shadow: 0 0 30px 10px rgba(113, 61, 123, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
    font-size: 30px; }
    @media screen and (max-width: 480px) {
      .tile.tile-16384 .tile-inner {
        font-size: 12px; } }
  .tile.tile-32768 .tile-inner {
    color: #f9f6f2;
    background: #000000;
    font-size: 30px;
    box-shadow: 0 0 30px 10px rgba(0, 0, 0, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
    @media screen and (max-width: 480px) {
      .tile.tile-32768 .tile-inner {
        font-size: 12px; } }
  .tile.tile-65536 .tile-inner {
    color: #f9f6f2;
    background: #383838;
    font-size: 30px;
    box-shadow: 0 0 30px 10px rgba(62, 62, 62, 0.65556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
    @media screen and (max-width: 480px) {
      .tile.tile-65536 .tile-inner {
        font-size: 12px; } }
  .tile.tile-131072 .tile-inner {
    color: #f9f6f2;
    background: #5a5a5a;
    font-size: 25px;
    box-shadow: 0 0 30px 10px rgba(94, 94, 94, 0.75556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
    @media screen and (max-width: 480px) {
      .tile.tile-65536 .tile-inner {
        font-size: 10px; } }
  .tile.tile-262144 .tile-inner {
    color: #f9f6f2;
    background: #7c7c7c;
    font-size: 25px;
    box-shadow: 0 0 30px 10px rgba(126, 126, 126, 0.85556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
    @media screen and (max-width: 480px) {
      .tile.tile-262144 .tile-inner {
        font-size: 10px; } }
  .tile.tile-524288 .tile-inner {
    color: #f9f6f2;
    background: #a3a3a3;
    font-size: 25px;
    box-shadow: 0 0 30px 10px rgba(177, 177, 177, 0.92556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333) }
    @media screen and (max-width: 480px) {
      .tile.tile-524288 .tile-inner {
        font-size: 10px; } }
  .tile.tile-1048576 .tile-inner {
    color: #f9f6f2;
    background: #c8c8c8;
    font-size: 21px;
    box-shadow: 0 0 30px 10px rgb(204, 204, 204), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
    @media screen and (max-width: 480px) {
      .tile.tile-1048576 .tile-inner {
        font-size: 8px; } }
  .tile.tile-2097152 .tile-inner {
    color: #f9f6f2;
    background: #32db25;
    font-size: 21px;
    box-shadow: 0 0 30px 10px rgb(67, 243, 55), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
    @media screen and (max-width: 480px) {
      .tile.tile-2097152 .tile-inner {
        font-size: 8px; } }
  .tile.tile-4194304 .tile-inner {
    color: #f9f6f2;
    background: #29c11d;
    font-size: 21px;
    box-shadow: 0 0 30px 10px rgb(53, 227, 42), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
    @media screen and (max-width: 480px) {
      .tile.tile-4194304 .tile-inner {
        font-size: 8px; } }
  .tile.tile-8388608 .tile-inner {
    color: #f9f6f2;
    background: #1ea214;
    font-size: 21px;
    box-shadow: 0 0 30px 10px rgb(38, 208, 27), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
    @media screen and (max-width: 480px) {
      .tile.tile-8388608 .tile-inner {
        font-size: 8px; } }
  .tile.tile-16777216 .tile-inner {
    color: #f9f6f2;
    background: #157b0d;
    font-size: 18px;
    box-shadow: 0 0 30px 10px rgb(26, 187, 18), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
    @media screen and (max-width: 480px) {
      .tile.tile-16777216 .tile-inner {
        font-size: 7px; } }
  .tile.tile-33554432 .tile-inner {
    color: #f9f6f2;
    background: #106809;
    font-size: 18px;
    box-shadow: 0 0 30px 10px rgb(19, 162, 11), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
    @media screen and (max-width: 480px) {
      .tile.tile-33554432 .tile-inner {
        font-size: 7px; } }
  .tile.tile-67108864 .tile-inner {
    color: #f9f6f2;
    background: #0b4e05;
    font-size: 18px;
    box-shadow: 0 0 30px 10px rgb(11, 137, 6), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
    @media screen and (max-width: 480px) {
      .tile.tile-67108864 .tile-inner {
        font-size: 7px; } }
  .tile.tile-134217728 .tile-inner {
    color: #f9f6f2;
    background: #3dbfe6;
    font-size: 16px;
    box-shadow: 0 0 30px 10px rgb(67, 242, 245), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
    @media screen and (max-width: 480px) {
      .tile.tile-134217728 .tile-inner {
        font-size: 7px; } }
  .tile.tile-268435456 .tile-inner {
    color: #f9f6f2;
    background: #2db2da;
    font-size: 16px;
    box-shadow: 0 0 30px 10px rgb(32, 238, 245), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
    @media screen and (max-width: 480px) {
      .tile.tile-268435456 .tile-inner {
        font-size: 7px; } }
  .tile.tile-536870912 .tile-inner {
    color: #f9f6f2;
    background: #1f9fc6;
    font-size: 16px;
    box-shadow: 0 0 30px 10px rgb(21, 233, 245), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
    @media screen and (max-width: 480px) {
      .tile.tile-536870912 .tile-inner {
        font-size: 7px; } }
  .tile.tile-1073741824 .tile-inner {
    color: #f9f6f2;
    background: #1586a8;
    font-size: 15px;
    box-shadow: 0 0 30px 10px rgb(11, 229, 245), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
    @media screen and (max-width: 480px) {
      .tile.tile-1073741824 .tile-inner {
        font-size: 7px; } }
  .tile.tile-2147483648 .tile-inner {
    color: #f9f6f2;
    background: #ed1c24;
    box-shadow: 0 0 30px 10px rgb(237, 28, 36), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
    font-size: 15px; }
/* ... */

